[gd_scene load_steps=36 format=2]

[ext_resource path="res://characters/Buddy/Buddy.gd" type="Script" id=1]
[ext_resource path="res://characters/Buddy/BodyBlue.material" type="Material" id=2]
[ext_resource path="res://characters/Buddy/Hand.material" type="Material" id=3]
[ext_resource path="res://characters/Buddy/Foot.material" type="Material" id=4]
[ext_resource path="res://characters/Buddy/Overlay.gd" type="Script" id=5]
[ext_resource path="res://textures/gauge_under.png" type="Texture" id=6]
[ext_resource path="res://textures/gauge_over.png" type="Texture" id=7]
[ext_resource path="res://textures/gauge_progress_red.png" type="Texture" id=8]
[ext_resource path="res://characters/Buddy/HealthProgressBar.gd" type="Script" id=9]
[ext_resource path="res://sounds/punch.wav" type="AudioStream" id=10]
[ext_resource path="res://sounds/PickWeapon.wav" type="AudioStream" id=11]
[ext_resource path="res://characters/Buddy/catch-cycle.anim" type="Animation" id=12]
[ext_resource path="res://characters/Buddy/default.anim" type="Animation" id=13]
[ext_resource path="res://characters/Buddy/gun_aim.anim" type="Animation" id=14]
[ext_resource path="res://characters/Buddy/hit.anim" type="Animation" id=15]
[ext_resource path="res://characters/Buddy/idle.anim" type="Animation" id=16]
[ext_resource path="res://characters/Buddy/punch.anim" type="Animation" id=17]
[ext_resource path="res://characters/Buddy/walk.anim" type="Animation" id=18]

[sub_resource type="CapsuleShape" id=1]
radius = 0.486064
height = 0.431546

[sub_resource type="CapsuleMesh" id=2]

[sub_resource type="SphereShape" id=3]
radius = 0.673517

[sub_resource type="SphereShape" id=4]
radius = 22.0463

[sub_resource type="AnimationNodeAnimation" id=5]
animation = "catch-cycle"

[sub_resource type="AnimationNodeOneShot" id=6]

[sub_resource type="AnimationNodeAnimation" id=7]
animation = "hit"

[sub_resource type="AnimationNodeBlend2" id=8]
filter_enabled = true
filters = [ "Body", "BodyLeftHand", "BodyRightHand" ]

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "walk-cycle"

[sub_resource type="AnimationNodeStateMachineTransition" id=11]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=12]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachine" id=13]
states/idle/node = SubResource( 9 )
states/idle/position = Vector2( 164, -12 )
states/walk-cycle/node = SubResource( 10 )
states/walk-cycle/position = Vector2( 488, -12 )
transitions = [ "idle", "walk-cycle", SubResource( 11 ), "walk-cycle", "idle", SubResource( 12 ) ]
graph_offset = Vector2( -137, -115 )

[sub_resource type="AnimationNodeOneShot" id=14]
filter_enabled = true
filters = [ "BodyLeftHand" ]

[sub_resource type="AnimationNodeAnimation" id=15]
animation = "punch"

[sub_resource type="AnimationNodeBlendTree" id=16]
graph_offset = Vector2( 916.588, 4.75619 )
nodes/Animation/node = SubResource( 5 )
nodes/Animation/position = Vector2( 400, 260 )
nodes/Hit/node = SubResource( 6 )
nodes/Hit/position = Vector2( 1040, 60 )
nodes/HitAnim/node = SubResource( 7 )
nodes/HitAnim/position = Vector2( 800, 300 )
nodes/HoldObject/node = SubResource( 8 )
nodes/HoldObject/position = Vector2( 720, 60 )
nodes/Move/node = SubResource( 13 )
nodes/Move/position = Vector2( 0, 0 )
nodes/Punch/node = SubResource( 14 )
nodes/Punch/position = Vector2( 360, 60 )
nodes/PunchAnim/node = SubResource( 15 )
nodes/PunchAnim/position = Vector2( 40, 260 )
nodes/output/position = Vector2( 1340, 60 )
node_connections = [ "output", 0, "Hit", "Hit", 0, "HoldObject", "Hit", 1, "HitAnim", "Punch", 0, "Move", "Punch", 1, "PunchAnim", "HoldObject", 0, "Punch", "HoldObject", 1, "Animation" ]

[sub_resource type="AnimationNodeStateMachinePlayback" id=17]

[node name="Buddy" type="KinematicBody" groups=[
"character",
]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.973, 0 )
collision_layer = 2
collision_mask = 3
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-008, -1, 0, 1, -4.37114e-008, 0, 0, 0 )
shape = SubResource( 1 )

[node name="Body" type="Spatial" parent="."]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.00430261, 0 )

[node name="Body" type="MeshInstance" parent="Body"]
transform = Transform( 0.4, 0, 0, 0, -1.94131e-008, -0.44, 0, 0.44412, -1.9233e-008, 0, 0, 0 )
mesh = SubResource( 2 )
material/0 = ExtResource( 2 )

[node name="BodyLeftHand" type="Spatial" parent="."]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.518391, -0.0696238, 0 )

[node name="CSGCombiner" type="CSGCombiner" parent="BodyLeftHand"]
editor/display_folded = true
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0 )

[node name="CSGBox" type="CSGBox" parent="BodyLeftHand/CSGCombiner"]
transform = Transform( 1.12872, 0, 0, 0, 1.14768, 0, 0, 0, 1.23187, 0.304599, 0, 0 )
material = ExtResource( 3 )

[node name="CSGBox2" type="CSGBox" parent="BodyLeftHand/CSGCombiner"]
transform = Transform( 0.72221, 0, 0, 0, 1.27913, 0, 0, 0, 1, -0.222855, 0, 0.722494 )
operation = 2
material = ExtResource( 3 )

[node name="LeftHand" type="Position3D" parent="BodyLeftHand"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0450835, 0.0211042, 0.078396 )

[node name="BodyRightHand" type="Spatial" parent="."]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.52351, 0, 0 )

[node name="CSGCombiner2" type="CSGCombiner" parent="BodyRightHand"]
editor/display_folded = true
transform = Transform( -0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0.0119659, -0.0725174, -0.00196791 )

[node name="CSGBox" type="CSGBox" parent="BodyRightHand/CSGCombiner2"]
transform = Transform( 1.12872, 0, 0, 0, 1.14768, 0, 0, 0, 1.23187, 0.304599, 0, 0 )
material = ExtResource( 3 )

[node name="CSGBox2" type="CSGBox" parent="BodyRightHand/CSGCombiner2"]
transform = Transform( 0.72221, 0, 0, 0, 1.27913, 0, 0, 0, 1, -0.222855, 0, 0.722494 )
operation = 2
material = ExtResource( 3 )

[node name="RightHand" type="Position3D" parent="BodyRightHand"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0588321, -0.0119864, 0.0783317 )

[node name="BodyRightFoot" type="CSGCombiner" parent="."]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.529, -0.707, 0.0927713 )

[node name="CSGCylinder" type="CSGCylinder" parent="BodyRightFoot"]
transform = Transform( 0.2, 0, 0, 0, -1.74846e-008, -0.25, 0, 0.4, -1.09278e-008, 0, 0, 0 )
material = ExtResource( 4 )

[node name="CSGBox" type="CSGBox" parent="BodyRightFoot"]
transform = Transform( 0.3, 0, 0, 0, 0.173095, 0, 0, 0, 0.294069, 0, -0.171094, 0 )
operation = 2
material = ExtResource( 4 )

[node name="BodyLeftFoot" type="CSGCombiner" parent="."]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.521732, -0.706464, -0.0927713 )

[node name="CSGCylinder" type="CSGCylinder" parent="BodyLeftFoot"]
transform = Transform( 0.2, 0, 0, 0, -1.74846e-008, -0.25, 0, 0.4, -1.09278e-008, 0, 0, 0 )
material = ExtResource( 4 )

[node name="CSGBox" type="CSGBox" parent="BodyLeftFoot"]
transform = Transform( 0.3, 0, 0, 0, 0.173095, 0, 0, 0, 0.294069, 0, -0.171094, 0 )
operation = 2
material = ExtResource( 4 )

[node name="CatchArea" type="Area" parent="."]
editor/display_folded = true
collision_layer = 16
collision_mask = 36

[node name="CollisionShape" type="CollisionShape" parent="CatchArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.293249, 0.800265 )
shape = SubResource( 3 )

[node name="EnnemyDetection" type="Area" parent="."]
editor/display_folded = true
collision_layer = 0
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="EnnemyDetection"]
shape = SubResource( 4 )

[node name="HoldPosition" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.44492, 0.843572 )

[node name="Overlay" type="Spatial" parent="."]
script = ExtResource( 5 )

[node name="HealthProgressBar" type="TextureProgress" parent="Overlay"]
visible = false
margin_right = 100.0
margin_bottom = 15.0
rect_min_size = Vector2( 100, 15 )
texture_under = ExtResource( 6 )
texture_over = ExtResource( 7 )
texture_progress = ExtResource( 8 )
script = ExtResource( 9 )

[node name="Tween" type="Tween" parent="Overlay/HealthProgressBar"]

[node name="PunchSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 10 )
unit_db = 20.0
max_distance = 20.0

[node name="PickUpSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 11 )
unit_db = 20.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/catch-cycle = ExtResource( 12 )
anims/default = ExtResource( 13 )
anims/gun_aim = ExtResource( 14 )
anims/hit = ExtResource( 15 )
anims/idle = ExtResource( 16 )
anims/punch = ExtResource( 17 )
anims/walk-cycle = ExtResource( 18 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 16 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/Hit/active = false
parameters/HoldObject/blend_amount = 0.0
parameters/Move/playback = SubResource( 17 )
parameters/Punch/active = false
[connection signal="on_health_change" from="." to="Overlay/HealthProgressBar" method="_on_Buddy_on_health_change"]
[connection signal="body_entered" from="EnnemyDetection" to="." method="_on_EnnemyDetection_body_entered"]
[connection signal="body_exited" from="EnnemyDetection" to="." method="_on_EnnemyDetection_body_exited"]
